--- a/manifest.json
+++ b/manifest.json
@@ -7,12 +7,12 @@
   "theme_color": "#3e8e41",
   "icons": [
     {
-      "src": "IMG_1595.jpg",
+      "src": "1E44A4B3-867E-4276-AAB4-502B760C8F57.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "IMG_1595.jpg",
+      "src": "1E44A4B3-867E-4276-AAB4-502B760C8F57.png",
       "sizes": "512x512",
       "type": "image/png"
     }
