--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
     "background_color": "#000000",
     "theme_color": "#000000",
     "icons": [{
-        "src": "icon.png",
+        "src": "1E44A4B3-867E-4276-AAB4-502B760C8F57.png",
         "sizes": "192x192",
         "type": "image/png"
     }]
