--- a/manifest.json
+++ b/manifest.json
@@ -7,12 +7,12 @@
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "1E44A4B3-867E-4276-AAB4-502B760C8F57.png",
+      "src":"icon_192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "1E44A4B3-867E-4276-AAB4-502B760C8F57.png",
+      "src": "icon_512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
