--- a/manifest.json
+++ b/manifest.json
@@ -7,12 +7,12 @@
   "theme_color": "#000000",
   "icons": [
     {
-      "src":"./icon_192x192.png",
+      "src":"IMG_1609.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "./icon_512x512.png",
+      "src": "IMG_1609.png",
       "sizes": "512x512",
       "type": "image/png"
     }
