--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Fish Tally",
+  "name": "Fishin' Buddy",
   "short_name": "FishTally",
   "start_url": "./index.html",
   "display": "standalone",
