--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Fishin' Buddy",
-  "short_name": "FishTally",
+  "short_name": "FishnBuddy",
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#000000",
