--- a/manifest.json
+++ b/manifest.json
@@ -2,19 +2,20 @@
   "name": "Fishin' Buddy",
   "short_name": "FishnBuddy",
   "start_url": "/Fishin/",
+  "scope": "/Fishin/"
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
   "icons": [
     {
-      "src":"icon_192x192.webp",
+      "src":"icon_192x192.png",
       "sizes": "192x192",
-      "type": "image/webp"
+      "type": "image/png"
     },
     {
-      "src": "icon_512x512.webp",
+      "src": "icon_512x512.png",
       "sizes": "512x512",
-      "type": "image/webp"
+      "type": "image/png"
     }
   ]
 }
