--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
   "theme_color": "#000000",
   "icons": [
     {
-      "src":"https://braekmonk.github.io/Fishin/icon_192x192.png",
+      "src":"https://braemonk.github.io/Fishin/icon_192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
